<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('orangtua', function (Blueprint $table) {
            $table->id();
            $table->string('nama_ayah', 50);
            $table->string('pekerjaan_ayah', 50);
            $table->string('nama_ibu', 50);
            $table->string('pekerjaan_ibu', 50);
            $table->string('nama_wali', 50)->nullable();
            $table->string('pekerjaan_wali', 50)->nullable();
            $table->string('nohp_wali', 15)->nullable();
            $table->string('nohp_orangtua', 15)->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('parent_datas');
    }
};
